<resources>
    <string name="app_name">TodoApp</string>
    <string name="login_name">Enter you name</string>
    <string name="login_button">Login</string>
    <string name="todo_text">Enter todo here</string>

    <string name="new_todo_notification_title_template">New todo: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_todo_notification_placeholder_text_template">
        You have added a todo item called: %1$s
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="logout_button">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_title">Title</string>
    <string name="todo_desc">Description</string>
    <string name="todo_date">Date</string>
    <string name="Add" />
    <string name="todo_add_button">Add</string>
    <string name="add_new_todo">Add new todo</string>
    <string name="send_sms">Send sms</string>
    <string name="send_email">Send email</string>
    <string name="sms_phone">Phone</string>
    <string name="sms_body">Text</string>
</resources>
