<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.fon.todoapp.fragments.NewTodoFragment"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/new_todo_title"
            android:hint="@string/todo_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/new_todo_text"
            android:gravity="top|left|center_vertical"
            android:hint="@string/todo_desc" />

        <Button
            android:text="@string/todo_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_todo_button"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</RelativeLayout>
